# journalabbr

./: .gitignore  CMakeLists.txt
assets/: journalabbr.icns  journalabbr.rc
scripts/: build.py  jcr.py  journals.csv  medline.py
src/: app.cpp  app.hpp  journal.cpp  journal.hpp  main.cpp
